--- a/index.html
+++ b/index.html
@@ -1,50 +1,109 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Assignments - Anis Batrisyia Rosli</title>
-   <link rel="stylesheet" href="css\styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rise Homepage</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Krona+One&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <div class="container">
 
-<header>
-    <h1>Interactive Media Design</h1>
-</header> 
 
-<nav>
-<ul class="menu-items">
-  <li><a href ="index.html">About</a></li>
-   <li><a href="work.html">Work</a></li>
-    <li><a href="contact.html">Contact</a></li>
-</ul> 
-</nav>
 
-<section class="col-span-8">
-  <h2>Anis Batrisyia Rosli</h2>
+<!-- Navigation Menu -->
+<header class="navbar">
+  <div class="logo">Rise</div> 
+  <nav>
+    <ul class="menu-items">
+      <li><a href="index.html">Services</a></li>
+      <li><a href="work.html">Work</a></li>
+      <li><a href="ourteam.html">Our Team</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header>
 
-  <h3>About Me</h3>
-  <p>A senior international student from Malaysia majoring in Advertising and Public Relation</p>
-
-  <h3>Classes Of The Semester</h3>
-  <p>Media Law, Interactive Media Design, ADPR Campaign, Heartland</p>
-
-  <h3>Outside Of Class</h3>
-  <p>Hiking, travel, music</p>
-
-  <h3>After Graduation</h3>
-  <p>Plan to move back to Malaysia to work at a PR agency</p>
+<!-- Hero Section-->
+<section class="hero">
+  <img src="images/hero.png" alt="Hero Image" class="hero-img">
+  <div class="hero-text">
+    <h1>Amplifying Voices, Empowering Communities</h1>
+  </div>
 </section>
 
-<aside class="col-span-4">
-  <p><img src="image/anisbatrisyiarosli.jpg" alt="Photo of Anis"></p>
-  <a href="https://www.linkedin.com/in/anis-batrisyia-rosli-321719271" class="button">Connect on LinkedIn</a>
-</aside>
+<!--Hero Description-->
+<div class="container">
+
+  <section class="hero-description">
+  <h1> At our core, we are a purpose-driven PR and communications agency dedicated to uplifting minority-owned businesses and
+     underserved communities. 
+    We specialize in strategic storytelling, community engagement, and impactful media that brings underrepresented voices to the forefront.</h1>
+  
+     <h1> Our mission is simple but powerful: to empower local businesses by amplifying their stories, building credibility, and opening doors to opportunities that drive sustainable growth. Through personalized campaigns, 
+      authentic representation, and strong partnerships, we help our clients stand shoulder-to-shoulder with industry leaders.</h1>
+  
+      <h1>From grassroots initiatives to polished media strategies, 
+        we bridge the gap between potential and visibility — ensuring every business we serve gets the recognition it deserves.</h1>
+  </section>
+</div>
+
+<!--Recent Work Section-->
+
+<section class="recent-work">
+  <div class="recent-heading">
+<h2>Recent Work</h2>
+  </div>
+
+<div class="news-grid">
+  <div class="news-card">
+    <img src="images/1st work.jpg" alt="">
+    <p>Description</p>
+    <h3>Freezing Thai Rolled Ice Cream</h3>
+  </div>
+
+  <div class="news-card">
+    <img src="images/2nd work.png" alt="">
+    <p>Description</p>
+    <h3>3 Daughter's Boutique</h3>
+  </div>
+
+  <div class="news-card">
+    <img src="images/3rd work.png" alt="">
+    <p>Description</p>
+    <h3>Aroma Indian Cuisine</h3>
+  </div>
+</div>
 
 
-<footer>
-  <p>&copy; 2025 Anis Batrisyia Rosli</p>
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-left">
+        <p>&copy; Rise 2025</p>
+        <h1>1245 Innovation Drive, Suite 300 Lincoln, NE 68508</h1>
+        <h1>402-876-2890</h1>
+        <h1>myrise@gmail.com</h1>
+      </div>
+
+<!-- Centered Social Media Icons -->
+<div class="footer-social">
+  <img src="images/facebook.png" alt="Facebook">
+  <img src="images/instagram.png" alt="Instagram">
+  <img src="images/linkedin.png" alt="LinkedIn">
+</div>
+
+
+<!-- Right side (empty or additional links) -->
+    <div class="footer-right">
+    <h1>Services</h1>
+    <h1>Work</h1>
+    <h1>Our Team</h1>
+    <h1>Contact</h1>
+    </div>
+  </div>
 </footer>
 
 </div> <!--container closes-->
