fixed background, card alignment

--- a/index.html
+++ b/index.html
@@ -54,29 +54,27 @@
 <!--Recent Work Section-->
 
 <section class="recent-work">
-  <div class="recent-heading">
-<h2>Recent Work</h2>
-  </div>
+  <h2>Recent Work</h2>
+  <div class="news-grid">
+    <div class="news-card">
+      <img src="images/1st work.jpg" alt="Freezing Thai Rolled Ice Cream">
+      <h3>Description</h3>
+      <div class="business-name">Freezing Thai Rolled Ice Cream</div>
+    </div>
 
-<div class="news-grid">
-  <div class="news-card">
-    <img src="images/1st work.jpg" alt="">
-    <p>Description</p>
-    <h3>Freezing Thai Rolled Ice Cream</h3>
-  </div>
+    <div class="news-card">
+      <img src="images/2nd work.png" alt="3 Daughter’s Boutique">
+      <h3>Description</h3>
+      <div class="business-name">3 Daughter’s Boutique</div>
+    </div>
 
-  <div class="news-card">
-    <img src="images/2nd work.png" alt="">
-    <p>Description</p>
-    <h3>3 Daughter's Boutique</h3>
+    <div class="news-card">
+      <img src="images/3rd work.png" alt="Aroma Indian Cuisine">
+      <h3>Description</h3>
+      <div class="business-name">Aroma Indian Cuisine</div>
+    </div>
   </div>
-
-  <div class="news-card">
-    <img src="images/3rd work.png" alt="">
-    <p>Description</p>
-    <h3>Aroma Indian Cuisine</h3>
-  </div>
-</div>
+</section>
 
 
   <footer class="footer">
@@ -106,7 +104,7 @@
   </div>
 </footer>
 
-</div> <!--container closes-->
+</div> 
 
 </body>
 </html>
