--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </div>
 
 
-<!-- Right side (empty or additional links) -->
+<!-- Right side -->
     <div class="footer-right">
     <h1>Services</h1>
     <h1>Work</h1>
