fixed footer tagline

--- a/index.html
+++ b/index.html
@@ -1,110 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rise Homepage</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Krona+One&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Krona+One&display=swap"
+    rel="stylesheet">
 </head>
+
 <body>
 
 
 
 
-<!-- Navigation Menu -->
-<header class="navbar">
-  <div class="logo">Rise</div> 
-  <nav>
-    <ul class="menu-items">
-      <li><a href="index.html">Services</a></li>
-      <li><a href="work.html">Work</a></li>
-      <li><a href="ourteam.html">Our Team</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-</header>
+  <!-- Navigation Menu -->
+  <header class="navbar">
+    <div class="logo">Rise</div>
+    <nav>
+      <ul class="menu-items">
+        <li><a href="index.html">Services</a></li>
+        <li><a href="work.html">Work</a></li>
+        <li><a href="ourteam.html">Our Team</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<!-- Hero Section-->
-<section class="hero">
-  <img src="images/hero.png" alt="Hero Image" class="hero-img">
-  <div class="hero-text">
-    <h1>Amplifying Voices, Empowering Communities</h1>
-  </div>
-</section>
-
-<!--Hero Description-->
-<div class="container">
-
-  <section class="hero-description">
-  <h1> At our core, we are a purpose-driven PR and communications agency dedicated to uplifting minority-owned businesses and
-     underserved communities. 
-    We specialize in strategic storytelling, community engagement, and impactful media that brings underrepresented voices to the forefront.</h1>
-  
-     <h1> Our mission is simple but powerful: to empower local businesses by amplifying their stories, building credibility, and opening doors to opportunities that drive sustainable growth. Through personalized campaigns, 
-      authentic representation, and strong partnerships, we help our clients stand shoulder-to-shoulder with industry leaders.</h1>
-  
-      <h1>From grassroots initiatives to polished media strategies, 
-        we bridge the gap between potential and visibility — ensuring every business we serve gets the recognition it deserves.</h1>
+  <!-- Hero Section-->
+  <section class="hero">
+    <img src="images/hero.png" alt="Hero Image" class="hero-img">
+    <div class="hero-text">
+      <h1>Amplifying Voices, Empowering Communities</h1>
+    </div>
   </section>
-</div>
 
-<!--Recent Work Section-->
+  <!--Hero Description-->
+  <div class="container">
 
-<section class="recent-work">
-  <h2>Recent Work</h2>
-  <div class="news-grid">
-    <div class="news-card">
-      <img src="images/1st work.jpg" alt="Freezing Thai Rolled Ice Cream">
-      <h3>Description</h3>
-      <div class="business-name">Freezing Thai Rolled Ice Cream</div>
-    </div>
+    <section class="hero-description">
+      <h1> At our core, we are a purpose-driven PR and communications agency dedicated to uplifting minority-owned
+        businesses and
+        underserved communities.
+        We specialize in strategic storytelling, community engagement, and impactful media that brings underrepresented
+        voices to the forefront.</h1>
 
-    <div class="news-card">
-      <img src="images/2nd work.png" alt="3 Daughter’s Boutique">
-      <h3>Description</h3>
-      <div class="business-name">3 Daughter’s Boutique</div>
-    </div>
+      <h1> Our mission is simple but powerful: to empower local businesses by amplifying their stories, building
+        credibility, and opening doors to opportunities that drive sustainable growth. Through personalized campaigns,
+        authentic representation, and strong partnerships, we help our clients stand shoulder-to-shoulder with industry
+        leaders.</h1>
 
-    <div class="news-card">
-      <img src="images/3rd work.png" alt="Aroma Indian Cuisine">
-      <h3>Description</h3>
-      <div class="business-name">Aroma Indian Cuisine</div>
-    </div>
+      <h1>From grassroots initiatives to polished media strategies,
+        we bridge the gap between potential and visibility — ensuring every business we serve gets the recognition it
+        deserves.</h1>
+    </section>
   </div>
-</section>
+
+  <!--Recent Work Section-->
+
+  <section class="recent-work">
+    <h2>Recent Work</h2>
+    <div class="news-grid">
+      <div class="news-card">
+        <img src="images/1st work.jpg" alt="Freezing Thai Rolled Ice Cream">
+        <h3>Description</h3>
+        <div class="business-name">Freezing Thai Rolled Ice Cream</div>
+      </div>
+
+      <div class="news-card">
+        <img src="images/2nd work.png" alt="3 Daughter’s Boutique">
+        <h3>Description</h3>
+        <div class="business-name">3 Daughter’s Boutique</div>
+      </div>
+
+      <div class="news-card">
+        <img src="images/3rd work.png" alt="Aroma Indian Cuisine">
+        <h3>Description</h3>
+        <div class="business-name">Aroma Indian Cuisine</div>
+      </div>
+    </div>
+  </section>
 
 
   <footer class="footer">
     <div class="footer-content">
       <div class="footer-left">
-        <p>&copy; Rise 2025</p>
         <h1>1245 Innovation Drive, Suite 300 Lincoln, NE 68508</h1>
         <h1>402-876-2890</h1>
         <h1>myrise@gmail.com</h1>
       </div>
 
-<!-- Centered Social Media Icons -->
-<div class="footer-social">
-  <img src="images/facebook.png" alt="Facebook">
-  <img src="images/instagram.png" alt="Instagram">
-  <img src="images/linkedin.png" alt="LinkedIn">
-</div>
+      <!-- Centered Social Media Icons -->
+      <div class="footer-social">
+        <img src="images/facebook.png" alt="Facebook">
+        <img src="images/instagram.png" alt="Instagram">
+        <img src="images/linkedin.png" alt="LinkedIn">
+      </div>
 
 
-<!-- Right side -->
-    <div class="footer-right">
-    <h1>Services</h1>
-    <h1>Work</h1>
-    <h1>Our Team</h1>
-    <h1>Contact</h1>
+      <!-- Right side -->
+      <div class="footer-right">
+        <h1>Services</h1>
+        <h1>Work</h1>
+        <h1>Our Team</h1>
+        <h1>Contact</h1>
+      </div>
     </div>
-  </div>
-</footer>
 
-</div> 
+    <p class="footer-tagline">&copy; Rise 2025</p>
+  </footer>
+
+  </div>
 
 </body>
+
 </html>
