Added html extensions

--- a/contact/index.html
+++ b/contact/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rise Homepage</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <title>Contact - Rise Homepage</title>
+  <link rel="stylesheet" href="../css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -13,7 +13,7 @@
     rel="stylesheet">
 </head>
 
-<body class="home-page">
+<body class="contact-page">
 
 
 
@@ -24,7 +24,7 @@
     <nav>
       <ul class="menu-items">
         <li><a href="/services/index.html">Services</a></li>
-        <li><a href="/work/index.html.html">Work</a></li>
+        <li><a href="/work/index.html">Work</a></li>
         <li><a href="/our-team/index.html">Our Team</a></li>
         <li><a href="/contact/index.html">Contact</a></li>
       </ul>
@@ -35,7 +35,7 @@
   <section class="hero">
     <img src="images/hero.png" alt="Hero Image" class="hero-img">
     <div class="hero-text">
-      <h1>Amplifying Voices, Empowering Communities</h1>
+      <h1>Contact Us</h1>
     </div>
   </section>
 
@@ -86,7 +86,6 @@
   </section>
 
 
-  <!-- Footer --> 
   <footer class="footer">
     <div class="footer-content">
       <div class="footer-left">
