--- a/services/index.html
+++ b/services/index.html
@@ -33,7 +33,7 @@
 
   <!-- Hero Section-->
   <section class="hero">
-    <img src="images/hero.png" alt="Hero Image" class="hero-img">
+    <img src="images/services1.jpeg" alt="Hero Image" class="hero-img">
     <div class="hero-text">
       <h1>Our Services</h1>
     </div>
