Added circle images

--- a/services/index.html
+++ b/services/index.html
@@ -33,32 +33,64 @@
 
   <!-- Hero Section-->
   <section class="hero">
-    <img src="../images/services1.jpeg" alt="Hero Image" class="hero-img">
-    <div class="hero-text">
-      <h1>Our Services</h1>
+    <img src="../images/services1.png" alt="Hero Image" class="hero-img">
+    <div class="hero-text-services">
+      <h1>We offer strategic advertising and public relations services dedicated to empowering minority-owned businesses in Lincoln, 
+        helping them amplify their voices, grow their brands, and build lasting community impact</h1>
     </div>
   </section>
 
-  <!--Hero Description-->
-  <div class="container">
+ <!--Circle Images-->
+  <section class="circle-row">
+    <div class="circle-item">
+      <img src="../images/services2.jpeg" alt="Service2">
+      <h3>Social Media</h3>
+      <P> We create and manage targeted social media strategies that engage your audience, strengthen your brand presence, 
+        and drive measurable growth across major platforms.</P>
+    </div>
 
-    <section class="hero-description">
-      <h1> At our core, we are a purpose-driven PR and communications agency dedicated to uplifting minority-owned
-        businesses and
-        underserved communities.
-        We specialize in strategic storytelling, community engagement, and impactful media that brings underrepresented
-        voices to the forefront.</h1>
+    <div class="circle-item">
+      <img src="../images/services3.jpg" alt="Service3">
+      <h3>Web Development</h3>
+      <P>We design and develop user-friendly, mobile-optimized websites that 
+        reflect your brand identity and help you reach and convert your target audience effectively.</P>
+    </div>
 
-      <h1> Our mission is simple but powerful: to empower local businesses by amplifying their stories, building
-        credibility, and opening doors to opportunities that drive sustainable growth. Through personalized campaigns,
-        authentic representation, and strong partnerships, we help our clients stand shoulder-to-shoulder with industry
-        leaders.</h1>
+    <div class="circle-item">
+      <img src="../images/services4.png" alt="Service4">
+      <h3>Campaign Concepts</h3>
+      <P>We craft impactful campaign ideas rooted in storytelling and strategy, ensuring your brand’s
+         message resonates deeply with your audience and achieves clear objectives.</P>
+    </div>
 
-      <h1>From grassroots initiatives to polished media strategies,
-        we bridge the gap between potential and visibility — ensuring every business we serve gets the recognition it
-        deserves.</h1>
-    </section>
-  </div>
+    <div class="circle-item">
+      <img src="../images/services5.jpg" alt="Service5">
+      <h3>Video</h3>
+      <P>We produce high-quality video content that tells your story, highlights your mission, and drives engagement 
+        across digital and social platforms.</P>
+    </div>
+
+    <div class="circle-item">
+      <img src="../images/services6.png" alt="Service6">
+      <h3>Marketing Analyis</h3>
+      <P>We deliver comprehensive marketing insights through detailed research and data analysis to help you
+         make informed decisions and optimize your strategies for maximum impact.</P>
+    </div>
+
+    <div class="circle-item">
+      <img src="../images/services7.jpg" alt="Service7">
+      <h3>Branding</h3>
+      <P>We build strong, authentic brand identities — from logos to messaging — that distinguish your business, 
+        build trust, and inspire loyalty within your community and beyond.</P>
+    </div>
+  </section>
+
+
+
+
+
+
+
 
   <!--Recent Work Section-->
 
