finished services section

--- a/services/index.html
+++ b/services/index.html
@@ -86,37 +86,7 @@
   </section>
 
 
-
-
-
-
-
-
-  <!--Recent Work Section-->
-
-  <section class="recent-work">
-    <h2>Recent Work</h2>
-    <div class="news-grid">
-      <div class="news-card">
-        <img src="images/1st work.jpg" alt="Freezing Thai Rolled Ice Cream">
-        <h3>Description</h3>
-        <div class="business-name">Freezing Thai Rolled Ice Cream</div>
-      </div>
-
-      <div class="news-card">
-        <img src="images/2nd work.png" alt="3 Daughter’s Boutique">
-        <h3>Description</h3>
-        <div class="business-name">3 Daughter’s Boutique</div>
-      </div>
-
-      <div class="news-card">
-        <img src="images/3rd work.png" alt="Aroma Indian Cuisine">
-        <h3>Description</h3>
-        <div class="business-name">Aroma Indian Cuisine</div>
-      </div>
-    </div>
-  </section>
-
+<!-- Footer -->
 
   <footer class="footer">
     <div class="footer-content">
@@ -128,9 +98,9 @@
 
       <!-- Centered Social Media Icons -->
       <div class="footer-social">
-        <img src="images/facebook.png" alt="Facebook">
-        <img src="images/instagram.png" alt="Instagram">
-        <img src="images/linkedin.png" alt="LinkedIn">
+        <img src="../images/facebook.png" alt="Facebook">
+        <img src="../images/instagram.png" alt="Instagram">
+        <img src="../images/linkedin.png" alt="LinkedIn">
       </div>
 
 
