--- a/work/index.html
+++ b/work/index.html
@@ -33,57 +33,27 @@
 
   <!-- Hero Section-->
   <section class="hero">
-    <img src="images/hero.png" alt="Hero Image" class="hero-img">
-    <div class="hero-text">
-      <h1>Work</h1>
+    <div class="hero-text-work">
+      <h1> Our Work</h1>
     </div>
   </section>
 
-  <!--Hero Description-->
-  <div class="container">
-
-    <section class="hero-description">
-      <h1> At our core, we are a purpose-driven PR and communications agency dedicated to uplifting minority-owned
-        businesses and
-        underserved communities.
-        We specialize in strategic storytelling, community engagement, and impactful media that brings underrepresented
-        voices to the forefront.</h1>
-
-      <h1> Our mission is simple but powerful: to empower local businesses by amplifying their stories, building
-        credibility, and opening doors to opportunities that drive sustainable growth. Through personalized campaigns,
-        authentic representation, and strong partnerships, we help our clients stand shoulder-to-shoulder with industry
-        leaders.</h1>
-
-      <h1>From grassroots initiatives to polished media strategies,
-        we bridge the gap between potential and visibility — ensuring every business we serve gets the recognition it
-        deserves.</h1>
-    </section>
-  </div>
-
-  <!--Recent Work Section-->
-
-  <section class="recent-work">
-    <h2>Recent Work</h2>
-    <div class="news-grid">
-      <div class="news-card">
-        <img src="images/1st work.jpg" alt="Freezing Thai Rolled Ice Cream">
-        <h3>Description</h3>
-        <div class="business-name">Freezing Thai Rolled Ice Cream</div>
-      </div>
-
-      <div class="news-card">
-        <img src="images/2nd work.png" alt="3 Daughter’s Boutique">
-        <h3>Description</h3>
-        <div class="business-name">3 Daughter’s Boutique</div>
-      </div>
-
-      <div class="news-card">
-        <img src="images/3rd work.png" alt="Aroma Indian Cuisine">
-        <h3>Description</h3>
-        <div class="business-name">Aroma Indian Cuisine</div>
-      </div>
+  <!--Square Images-->
+  <section class="photo-grid">
+    <div class="photo-item">
+      <img src="../images/work1.png" alt="Photo 1">
+    </div>
+    <div class="photo-item">
+      <img src="../images/work2.png" alt="Photo 2">
+    </div>
+    <div class="photo-item">
+      <img src="../images/work3.png" alt="Photo 3">
+    </div>
+    <div class="photo-item">
+      <img src="../images/work4.png" alt="Photo 4">
     </div>
   </section>
+
 
 
   <footer class="footer">
