--- a/contact/index.html
+++ b/contact/index.html
@@ -33,56 +33,21 @@
 
   <!-- Hero Section-->
   <section class="hero">
-    <img src="images/hero.png" alt="Hero Image" class="hero-img">
+    <img src="../images/hero.png" alt="Hero Image" class="hero-img">
     <div class="hero-text">
       <h1>Contact Us</h1>
     </div>
   </section>
 
-  <!--Hero Description-->
-  <div class="container">
-
-    <section class="hero-description">
-      <h1> At our core, we are a purpose-driven PR and communications agency dedicated to uplifting minority-owned
-        businesses and
-        underserved communities.
-        We specialize in strategic storytelling, community engagement, and impactful media that brings underrepresented
-        voices to the forefront.</h1>
-
-      <h1> Our mission is simple but powerful: to empower local businesses by amplifying their stories, building
-        credibility, and opening doors to opportunities that drive sustainable growth. Through personalized campaigns,
-        authentic representation, and strong partnerships, we help our clients stand shoulder-to-shoulder with industry
-        leaders.</h1>
-
-      <h1>From grassroots initiatives to polished media strategies,
-        we bridge the gap between potential and visibility — ensuring every business we serve gets the recognition it
-        deserves.</h1>
-    </section>
-  </div>
-
-  <!--Recent Work Section-->
-
-  <section class="recent-work">
-    <h2>Recent Work</h2>
-    <div class="news-grid">
-      <div class="news-card">
-        <img src="images/1st work.jpg" alt="Freezing Thai Rolled Ice Cream">
-        <h3>Description</h3>
-        <div class="business-name">Freezing Thai Rolled Ice Cream</div>
-      </div>
-
-      <div class="news-card">
-        <img src="images/2nd work.png" alt="3 Daughter’s Boutique">
-        <h3>Description</h3>
-        <div class="business-name">3 Daughter’s Boutique</div>
-      </div>
-
-      <div class="news-card">
-        <img src="images/3rd work.png" alt="Aroma Indian Cuisine">
-        <h3>Description</h3>
-        <div class="business-name">Aroma Indian Cuisine</div>
-      </div>
-    </div>
+  <!--Contact Section-->
+  <section class="contact-section">
+    <h2>Contact Us</h2>
+    <form class="contact-form">
+      <input type="text" placeholder="Your Name" required>
+      <input type="email" placeholder="Your Email" required>
+      <textarea placeholder="Your Message" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
   </section>
 
 
@@ -96,9 +61,9 @@
 
       <!-- Centered Social Media Icons -->
       <div class="footer-social">
-        <img src="images/facebook.png" alt="Facebook">
-        <img src="images/instagram.png" alt="Instagram">
-        <img src="images/linkedin.png" alt="LinkedIn">
+        <img src="../images/facebook.png" alt="Facebook">
+        <img src="../images/instagram.png" alt="Instagram">
+        <img src="../images/linkedin.png" alt="LinkedIn">
       </div>
 
 
