--- a/our-team/index.html
+++ b/our-team/index.html
@@ -32,58 +32,52 @@
   </header>
 
   <!-- Hero Section-->
-  <section class="hero">
-    <img src="images/hero.png" alt="Hero Image" class="hero-img">
+  <section class="hero-work">
     <div class="hero-text">
-      <h1>Our Team</h1>
+      <h1>Meet The Team That Makes It All Possible</h1>
     </div>
   </section>
 
-  <!--Hero Description-->
-  <div class="container">
-
-    <section class="hero-description">
-      <h1> At our core, we are a purpose-driven PR and communications agency dedicated to uplifting minority-owned
-        businesses and
-        underserved communities.
-        We specialize in strategic storytelling, community engagement, and impactful media that brings underrepresented
-        voices to the forefront.</h1>
-
-      <h1> Our mission is simple but powerful: to empower local businesses by amplifying their stories, building
-        credibility, and opening doors to opportunities that drive sustainable growth. Through personalized campaigns,
-        authentic representation, and strong partnerships, we help our clients stand shoulder-to-shoulder with industry
-        leaders.</h1>
-
-      <h1>From grassroots initiatives to polished media strategies,
-        we bridge the gap between potential and visibility — ensuring every business we serve gets the recognition it
-        deserves.</h1>
-    </section>
+ <!--Circle Images-->
+ <section class="circle-row">
+  <div class="circle-item">
+    <img src="../images/team1.png" alt="Service2">
+    <h3>Steven Choo</h3>
+    <P> Art Director</P>
   </div>
 
-  <!--Recent Work Section-->
+  <div class="circle-item">
+    <img src="../images/team2.png" alt="Service3">
+    <h3>Maria Cheng</h3>
+    <P>Social Media Director</P>
+  </div>
 
-  <section class="recent-work">
-    <h2>Recent Work</h2>
-    <div class="news-grid">
-      <div class="news-card">
-        <img src="images/1st work.jpg" alt="Freezing Thai Rolled Ice Cream">
-        <h3>Description</h3>
-        <div class="business-name">Freezing Thai Rolled Ice Cream</div>
-      </div>
+  <div class="circle-item">
+    <img src="../images/team3.png" alt="Service4">
+    <h3>Colby Jackson</h3>
+    <P>Account Executive</P>
+  </div>
 
-      <div class="news-card">
-        <img src="images/2nd work.png" alt="3 Daughter’s Boutique">
-        <h3>Description</h3>
-        <div class="business-name">3 Daughter’s Boutique</div>
-      </div>
+  <div class="circle-item">
+    <img src="../images/team4.png" alt="Service5">
+    <h3>Video</h3>
+    <P>Strategist</P>
+  </div>
 
-      <div class="news-card">
-        <img src="images/3rd work.png" alt="Aroma Indian Cuisine">
-        <h3>Description</h3>
-        <div class="business-name">Aroma Indian Cuisine</div>
-      </div>
-    </div>
-  </section>
+  <div class="circle-item">
+    <img src="../images/team5.png" alt="Service6">
+    <h3>Jared Adams</h3>
+    <P>Public Relations Director</P>
+  </div>
+
+  <div class="circle-item">
+    <img src="../images/team6.png" alt="Service7">
+    <h3>Suhaila Najib</h3>
+    <P>Copywriter</P>
+  </div>
+</section>
+
+ 
 
 
   <footer class="footer">
@@ -96,9 +90,9 @@
 
       <!-- Centered Social Media Icons -->
       <div class="footer-social">
-        <img src="images/facebook.png" alt="Facebook">
-        <img src="images/instagram.png" alt="Instagram">
-        <img src="images/linkedin.png" alt="LinkedIn">
+        <img src="../images/facebook.png" alt="Facebook">
+        <img src="../images/instagram.png" alt="Instagram">
+        <img src="../images/linkedin.png" alt="LinkedIn">
       </div>
 
 
