--- a/work/index.html
+++ b/work/index.html
@@ -32,8 +32,8 @@
   </header>
 
   <!-- Hero Section-->
-  <section class="hero">
-    <div class="hero-text-work">
+  <section class="hero-work">
+    <div class="hero-text">
       <h1> Our Work</h1>
     </div>
   </section>
@@ -66,9 +66,9 @@
 
       <!-- Centered Social Media Icons -->
       <div class="footer-social">
-        <img src="images/facebook.png" alt="Facebook">
-        <img src="images/instagram.png" alt="Instagram">
-        <img src="images/linkedin.png" alt="LinkedIn">
+        <img src="../images/facebook.png" alt="Facebook">
+        <img src="../images/instagram.png" alt="Instagram">
+        <img src="../images/linkedin.png" alt="LinkedIn">
       </div>
 
 
