--- a/our-team/index.html
+++ b/our-team/index.html
@@ -60,13 +60,13 @@
 
   <div class="circle-item">
     <img src="../images/team4.png" alt="Service5">
-    <h3>Video</h3>
+    <h3>Jared Adams</h3>
     <P>Strategist</P>
   </div>
 
   <div class="circle-item">
     <img src="../images/team5.png" alt="Service6">
-    <h3>Jared Adams</h3>
+    <h3>Rachel Lim</h3>
     <P>Public Relations Director</P>
   </div>
 
