included link to footer right

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
 
       <!-- Right side -->
       <div class="footer-right">
-        <h1>Services</h1>
-        <h1>Work</h1>
-        <h1>Our Team</h1>
-        <h1>Contact</h1>
+        <li><a href="/services/index.html">Services</a></li>
+        <li><a href="/work/index.html.html">Work</a></li>
+        <li><a href="/our-team/index.html">Our Team</a></li>
+        <li><a href="/contact/index.html">Contact</a></li>
       </div>
     </div>
 
